@startuml
title Логічна схема реляційної моделі БД

entity "Користувач" {
  * ім’я : VARCHAR
  * вік : INT
  * алергії : TEXT
  * ціль : VARCHAR
}

entity "ДаніПроЗдоров’я" {
  * вага : FLOAT
  * зріст : INT
  * індекс_маси_тіла : FLOAT
  * рівень_активності : VARCHAR
  * дієтичні_обмеження : TEXT
}

entity "ПланХарчування" {
  * сніданок : TEXT
  * обід : TEXT
  * вечеря : TEXT
  * калорійність : INT
}

entity "Рекомендації" {
  * обсяг_води_на_день : FLOAT
  * фізична_активність : VARCHAR
}

entity "Досягнення" {
  * кількість_тренувань : INT
  * виконані_вправи : TEXT
  * нагороди : TEXT
}

entity "Самоповага" {
  * рівень : FLOAT
  * впевненість : VARCHAR
}

entity "ТанцювальніПодії" {
  * назва : VARCHAR
  * тип_танцю : VARCHAR
  * дата_проведення : DATE
  * місце_проведення : VARCHAR
}

"Користувач" ||--|| "ДаніПроЗдоров’я" : має
"Користувач" ||--|| "ПланХарчування" : отримує
"Користувач" ||--o{ "Досягнення" : має
"Користувач" ||--|| "Самоповага" : отримує
"Користувач" ||--o{ "ТанцювальніПодії" : читає
"ПланХарчування" ||--o{ "Рекомендації" : містить

@enduml
